--- a/angular2-auth/.gitignore
+++ b/angular2-auth/.gitignore
@@ -31,3 +31,14 @@ testem.log
 #System Files
 .DS_Store
 Thumbs.db
+.editorconfig
+.gitignore
+README.md
+angular-cli.json
+bash.exe.stackdump
+e2e/
+karma.conf.js
+package.json
+protractor.conf.js
+src/
+tslint.json
