--- a/cme-ui/package.json
+++ b/cme-ui/package.json
@@ -12,16 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.3.1",
+    "@angular/animations": "4.0.2",
+    "@angular/common": "4.0.2",
+    "@angular/compiler": "4.0.2",
+    "@angular/core": "4.0.2",
+    "@angular/forms": "4.0.2",
+    "@angular/http": "4.0.2",
+    "@angular/platform-browser": "4.0.2",
+    "@angular/platform-browser-dynamic": "4.0.2",
+    "@angular/router": "4.0.2",
     "angular-confirmation-popover": "^2.1.2",
-    "angular2-datatable": "^0.5.2",
+    "angular2-datatable": "^0.6.0",
     "angular2-modal": "^2.0.3",
     "core-js": "^2.4.1",
     "ng2-auto-complete": "^0.12.0",
@@ -34,13 +35,13 @@
     "ng2-translate": "^5.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.8.10"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.3.1",
+    "@angular/cli": "^1.0.0",
+    "@angular/compiler-cli": "^4.1.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "@angular/cli": "^1.0.0",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
