--- a/cme-ui/package.json
+++ b/cme-ui/package.json
@@ -42,7 +42,7 @@
     "@angular/compiler-cli": "^4.1.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
-    "codelyzer": "~2.0.0-beta.1",
+    "codelyzer": "^3.0.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
