--- a/cme-ui/package.json
+++ b/cme-ui/package.json
@@ -23,7 +23,6 @@
     "@angular/router": "4.0.2",
     "angular-confirmation-popover": "^2.1.2",
     "angular2-datatable": "^0.6.0",
-    "angular2-modal": "^2.0.3",
     "core-js": "^2.4.1",
     "ng2-auto-complete": "^0.12.0",
     "ng2-ckeditor": "^1.0.3",
@@ -31,6 +30,7 @@
     "ng2-datetime-picker": "^0.12.1",
     "ng2-file-upload": "^1.2.0",
     "ng2-filter-pipe": "^0.1.6",
+    "ng2-modal": "0.0.25",
     "ng2-pagination": "^2.0.1",
     "ng2-translate": "^5.0.0",
     "rxjs": "^5.0.1",
